# Health-Tech-Analytics

./: Initial_Insights.md  README.md  pyproject.toml
data/: Campaign_signup_rate.csv  avg_claim_covered_amounts.csv  campaigns.csv  claims.csv  customers.csv
notebooks/: 01_interview_level_questions.ipynb
plots/: CTR for different types of campaigns through Email.html  CTR for different types of campaigns through SEO.html  CTR for different types of campaigns through Social Media.html  CTR thorugh different platforms.html  Distribution of CTR.html  campaign signup rates 360 categorised by campaign category.html  campaign signup rates 360 categorised by campaign type.html  signup rates by platform category.html  signups across different platforms.html
results/: claims_count_2020.csv  claims_count_cost_06_2023.csv  claims_count_state_wise_2023.csv  customer_names_with_highest_number_of_claims_across_all_time.csv  signup_counts.csv  top_hair_products_in_jun_2023.csv  top_products_among_hair_biotin__vitB_on_25_12_2022.csv
src/: utils.py
